--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/soccer_object_msgs
-	previous = 
-	base = 642b268
+	previous = 642b268
+	base = 9114b0b
 	trim = 
 	trimbase = 
