--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/soccer_object_msgs
-	previous = 
-	base = 63f478a
+	previous = 63f478a
+	base = fc5e5e9
 	trim = 
 	trimbase = 
