--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/soccer_object_msgs
-	previous = 
-	base = b8263eb
+	previous = b8263eb
+	base = d1b2d67
 	trim = 
 	trimbase = 
