--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.1-3": ["Tue Feb 08 2022", "ijnek", "kenjibrameld@gmail.com"]}
+{"1.0.1-4": ["Tue Apr 19 2022", "ijnek", "kenjibrameld@gmail.com"], "1.0.1-3": ["Tue Feb 08 2022", "ijnek", "kenjibrameld@gmail.com"]}
