--- a/tracks.yaml
+++ b/tracks.yaml
@@ -94,12 +94,12 @@ tracks:
       :{release_inc} --os-name rhel
     devel_branch: rolling
     last_version: 1.0.1
-    name: upstream
+    name: soccer_object_msgs
     patches: null
     release_inc: '3'
     release_repo_url: null
     release_tag: :{version}
     ros_distro: rolling
     vcs_type: git
-    vcs_uri: https://github.com/ijnek/soccer_interfaces.git
+    vcs_uri: https://github.com/ijnek/soccer_object_msgs.git
     version: :{auto}
