--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>soccer_object_msgs</name>
-  <version>1.0.1</version>
+  <version>1.1.0</version>
   <description>Package providing interfaces for objects in a soccer domain.</description>
   <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
   <license>Apache License 2.0</license>
@@ -21,5 +21,9 @@
 
   <export>
     <build_type>ament_cmake</build_type>
+    <deprecated>
+      This package will be removed in ROS J-Turtle.
+      Instead, use packages from ros-sports/soccer_interfaces, which provides similar features with a different API.
+    </deprecated>
   </export>
 </package>
