--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/soccer_object_msgs
-	previous = 
-	base = 09482d9
+	previous = 09482d9
+	base = 3ed4206
 	trim = 
 	trimbase = 
