--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/soccer_object_msgs
-	previous = 
-	base = c59327e
+	previous = c59327e
+	base = a9a90ad
 	trim = 
 	trimbase = 
