--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/soccer_object_msgs
-	previous = 
-	base = 768fcfe
+	previous = 768fcfe
+	base = 0a60e1b
 	trim = 
 	trimbase = 
